knative/petclinic.yaml
#
# Spring PetClinic Sample Application on Knative:
#
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: petclinic
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: springdeveloper/spring-petclinic:2.0.0.BUILD-SNAPSHOT
            env:
              - name: SPRING_PROFILES_ACTIVE
                value: 'production,kubernetes'
              - name: MYSQL_HOST
                value: petclinic-db-mysql
              - name: MYSQL_USERNAME
                value: root
              - name: MYSQL_PASSWORD
                valueFrom:
                  secretKeyRef:
                    name: petclinic-db-mysql
                    key: mysql-root-password
            readinessProbe:
              httpGet:
                path: /manage/health
              initialDelaySeconds: 5
              periodSeconds: 5
