knative/minikube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: knative-ingress
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: knative-ingressgateway
    servicePort: 80
